--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Run 'python setup.py install'.
 You can also start application from source dir, just run ./volti.
 
 - Arch
-volti is in aur, see http://aur.archlinux.org/packages.php?ID=33525
+volti is in aur, see https://aur.archlinux.org/packages/volti/
 
 - Gentoo
 volti is in portage, see http://packages.gentoo.org/package/media-sound/volti
